<resources>
    <string name="app_name">FMP Folder Music Player</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="pref_general_use_light_theme">pref_general_use_light_theme</string>
    <string name="pref_file_browser_show_hidden">pref_file_browser_show_hidden</string>
    <string name="pref_file_browser_show_non_audio">pref_file_browser_show_non_audio</string>
    <string name="pref_last_main_content_fragment">pref_last_main_content_fragment</string>
    <string name="pref_last_file_browser_path">pref_last_file_browser_path</string>

    <string name="action_settings">Settings</string>
    <string name="dev_mail">dev.placeholder@mail.com</string>
    <string name="title_activity_settings">Settings</string>
    <string name="append">Append</string>
    <string name="play_next">Play Next</string>
    <string name="append_next_play"><![CDATA[Append Next & Play]]></string>
    <string name="append_all">Append All</string>
    <string name="currently_playing">Currently Playing</string>
    <string name="file_browser">File Browser</string>
    <string name="libraries">Libraries</string>
    <string name="playlists">Playlists</string>
    <string name="other">Other</string>
    <string name="settings">Settings</string>
    <string name="recommend_this_app">Recommend This App</string>
    <string name="rate_this_app_in_google_play">Rate This App in Google Play</string>
    <string name="file_icon">File Icon</string>
    <string name="test_text_example_caps">EXAMPLE</string>
    <string name="options">Options</string>
    <string name="file_icons">File Icon</string>
    <string name="long_example_text">Example i make this very loing tosdadatr eatsaegv 45eastseaFSD SDA</string>
    <string name="more_info_example">More Info Example</string>
    <string name="time_placeholder">00:00</string>
    <string name="repeat">Repeat</string>
    <string name="previous">Previous</string>
    <string name="stop">Stop</string>
    <string name="play_pause">Play/Pause</string>
    <string name="next">Next</string>
    <string name="launcher_icon">Launcher Icon</string>
    <string name="loading_3_dots">loading ...</string>
    <string name="pref_playlist_repeat_mode">pref_playlist_repeat_mode</string>
    <string name="pref_playlist_shuffle">pref_playlist_shuffle</string>
    <string name="remove">Remove</string>
    <string name="play">Play</string>
    <string name="pref_general_save_current_playlist">pref_general_save_current_playlist</string>
    <string name="use_light_theme">Use Light Theme</string>
    <string name="need_to_restart">You need to restart the app.</string>
    <string name="always_save_current_list">Always Save Current Playlist</string>
    <string name="may_slow_down_on_loading">MAY slow down loading if current list is very long.</string>
    <string name="pref_playlist_current_item">pref_playlist_current_item</string>
</resources>
