<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_currently_playing"
            android:icon="@drawable/ic_play_arrow"
            android:title="@string/currently_playing"/>
        <item
            android:id="@+id/nav_file_browser"
            android:icon="@drawable/ic_nav_folder"
            android:title="@string/file_browser"/>
        <item
            android:id="@+id/nav_libraries"
            android:icon="@drawable/ic_nav_library_music"
            android:title="@string/libraries"/>
        <item
            android:id="@+id/nav_playlists"
            android:icon="@drawable/ic_nav_playlist"
            android:title="@string/playlists"/>
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_nav_settings"
            android:title="@string/settings"/>
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_recommend"
                android:icon="@drawable/ic_nav_share"
                android:title="@string/recommend_this_app"/>
            <item
                android:id="@+id/nav_rate"
                android:icon="@drawable/ic_nav_plus_one"
                android:title="@string/rate_this_app_in_google_play"/>
        </menu>
    </item>

</menu>
